Dropdown on clicking of name in navbar (removal of gear icon); adjustment of styles to localize button spacing to dialog boxes; fixing of date format for survey date picker

--- a/src/TRAISI/ClientApp/src/app/users-management/roles-management/roles-management.component.scss
+++ b/src/TRAISI/ClientApp/src/app/users-management/roles-management/roles-management.component.scss
@@ -9,3 +9,7 @@
 datatable-scroller {
     width: 100% !important;
 }
+
+.action-button {
+  margin-right:5px;
+}
